@@ -33,6 +33,18 @@ begin_import
 import|import
 name|java
 operator|.
+name|lang
+operator|.
+name|reflect
+operator|.
+name|Method
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|net
 operator|.
 name|Authenticator
@@ -248,25 +260,10 @@ name|result
 init|=
 literal|null
 decl_stmt|;
-name|String
-name|proxyHost
-init|=
-name|System
-operator|.
-name|getProperty
-argument_list|(
-literal|"http.proxyHost"
-argument_list|)
-decl_stmt|;
 if|if
 condition|(
-name|getRequestingHost
+name|isProxyAuthentication
 argument_list|()
-operator|.
-name|equals
-argument_list|(
-name|proxyHost
-argument_list|)
 condition|)
 block|{
 name|String
@@ -471,6 +468,180 @@ block|}
 block|}
 return|return
 name|result
+return|;
+block|}
+comment|/**      * Checks if the current authentication request is for the proxy server.      * This functionality is not availaible in JDK1.4, so we check this in a      * very dirty way which is probably not very portable, but will work for      * the SUN 1.4 JDKs.      *       * @return      */
+specifier|private
+name|boolean
+name|isProxyAuthentication
+parameter_list|()
+block|{
+try|try
+block|{
+comment|// we first try to invoke the getRequestorType() method which is a JDK1.5+ method
+name|Method
+name|m
+init|=
+name|Authenticator
+operator|.
+name|class
+operator|.
+name|getDeclaredMethod
+argument_list|(
+literal|"getRequestorType"
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|Object
+name|result
+init|=
+name|m
+operator|.
+name|invoke
+argument_list|(
+name|this
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+return|return
+literal|"PROXY"
+operator|.
+name|equals
+argument_list|(
+name|String
+operator|.
+name|valueOf
+argument_list|(
+name|result
+argument_list|)
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|NoSuchMethodException
+name|e
+parameter_list|)
+block|{
+comment|// do nothing, this is a JDK1.5+ method
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|t
+parameter_list|)
+block|{
+name|Message
+operator|.
+name|debug
+argument_list|(
+literal|"Error occurred while checking if the authentication request is for the proxy server: "
+operator|+
+name|t
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|// now we will do something very dirty and analyse the stack trace to see
+comment|// if this method is called from within the 'getHttpProxyAuthentication' method
+comment|// or the 'getServerAuthentication' method which are both part of the
+comment|// sun.net.www.protocol.http.HttpURLConnection class.
+comment|// This might not work on other 1.4 JVM's!
+comment|// This code should be removed when Ivy requires JDK1.5+
+name|StackTraceElement
+index|[]
+name|stackTrace
+init|=
+operator|(
+operator|new
+name|Exception
+argument_list|()
+operator|)
+operator|.
+name|getStackTrace
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|stackTrace
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+literal|"getHttpProxyAuthentication"
+operator|.
+name|equals
+argument_list|(
+name|stackTrace
+index|[
+name|i
+index|]
+operator|.
+name|getMethodName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return
+literal|true
+return|;
+block|}
+if|if
+condition|(
+literal|"getServerAuthentication"
+operator|.
+name|equals
+argument_list|(
+name|stackTrace
+index|[
+name|i
+index|]
+operator|.
+name|getMethodName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
+block|}
+comment|// fallback to the Ivy 2.2.0 behavior
+name|String
+name|proxyHost
+init|=
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"http.proxyHost"
+argument_list|)
+decl_stmt|;
+return|return
+name|getRequestingHost
+argument_list|()
+operator|.
+name|equals
+argument_list|(
+name|proxyHost
+argument_list|)
 return|;
 block|}
 block|}
